--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     function resize()
     {
       var clientHeight = document.getElementById('mainDiv').scrollHeight;
-	  alert('hello');
+	  //alert('hello');
       parent.postMessage(
 				{ 
 					user_age:    clientHeight,
